samples/_failures_safe/1761697850_32991e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_813eb4e1.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_813eb4e1.c:125:20: error: expected ‘;’ at end of input
  125 |                 sum
      |                    ^
      |                    ;
./samples/SAFE/__tmp_813eb4e1.c:125:17: error: expected declaration or statement at end of input
  125 |                 sum
      |                 ^~~
./samples/SAFE/__tmp_813eb4e1.c:125:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_813eb4e1.c:125:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_813eb4e1.c:125:17: error: expected declaration or statement at end of input
